# socks-router

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  config.example.toml  dynconfig.example.toml
.cargo/: config.toml
src/: client.rs  config.rs  domain.rs  main.rs  utils.rs  watcher.rs
src/pkts/: mod.rs  parse.rs
src/server/: conn.rs  mod.rs
