[package]
name = "socks-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.61"
bytes = "1"
clap = { version = "4.1.1", features = ["derive"] }
console-subscriber = "0.1.8"
hex = "0.4.3"
nom = "7"
num-derive = "0.3"
num-traits = "0.2"
pin-project = "1.0.12"
thiserror = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
