[package]
name = "socks-router"
version = "0.1.0"
description = "A dynamic router for SOCKS5 proxy requests."
repository = "https://github.com/riccz/socks-router"
authors = ["Riccardo Zanol <hello@riccza.nl>"]
license = "MIT"
edition = "2021"
exclude = ["/config.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.61"
bytes = "1"
clap = { version = "4.1.1", features = ["derive", "env"] }
hex = "0.4.3"
nom = "7"
notify = { version = "5.0.0", default-features = false, feature = [
    "macos_kqueue",
] }
num-derive = "0.3"
num-traits = "0.2"
pin-project = "1.0.12"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
warp = "0.3.3"
